--- a/docker/Dockerfile.node
+++ b/docker/Dockerfile.node
@@ -16,7 +16,7 @@ RUN rm openvidu-call-front/package-lock.json && \
     npm run prod:build ${BASE_HREF} && \
     cd ../ && rm -rf openvidu-call-front
 
-FROM node:16-alpine3.16
+FROM node:18-alpine
 
 WORKDIR /opt/openvidu-call
 
